# diploma

./: .gitignore  README.md  pyproject.toml
scripts/: Untitled.ipynb  covid19_data_greece.ipynb  helper.py  mobility_analysis_apple.ipynb  postgres.py  update_apple_db.ipynb  update_google_db.ipynb
scripts/db_scripts_py/: apple_db.py  google_db.py  json.py
