[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["Tony Tziorvas <tonytziorvas@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^1.4.2"
plotly = "^5.8.0"
numpy = "^1.22.4"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"
statsmodels = "^0.13.2"
missingno = "^0.5.1"
SQLAlchemy = "^1.4.36"
tqdm = "^4.64.0"
python-dotenv = "^0.20.0"
requests = "^2.27.1"
ipykernel = "^6.13.0"
psycopg2 = "^2.9.3"
nbformat = "^5.4.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
